# $Id$

2007-01-11	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: get() implemented.

	* main/Criteria/Criteria.class.php: optimized fetching of non-required
	non-lazy collections.

	* main/DAOs/BaseDAO.class.php: getListByCriteria() removed.

	* main/Criteria/Criteria.class.php: collection caching fixed.

	* core/OSQL/SelectQuery.class.php: now knows about fetch strategy, if
	any.

	* main/DAOs/Workers/: internal fetchObject() and fetchList()
	implemented.

	* core/DB/: dropped queryObjectRow(), queryObjectSet and
	queryJoinedObjectSet().

2007-01-08	Konstantin V. Arkhipov

	* main/Utils/HeaderUtils.class.php: redirectBack() now return
	redirecting url if any.

2007-01-08	Konstantin V. Arkhipov

	* core/DB/PgSQL.class.php: ignores unknown column types in
	getTableInfo().

2007-01-06	Konstantin V. Arkhipov

	* ext/src/core/DB/ImaginaryDialect.c: segfault spotted and fixed.

	* core/DB/PostgresDialect.class.php: default tsearch configuration
	changed to 'utf8_russian'.

	* core/DB/MyImprovedDialect.class.php, core/DB/MySQLim.class.php: new
	DB connector.

	* meta/builders/SchemaBuilder.class.php: fixed creation ManyToMany
	helper tables.

	* core/OSQL/DBTable.class.php: ability to add unique indexes added.

	* core/OSQL/DBColumn.class.php: unique property dropped.

	* core/DB/Sequenceless.class.php: obtainSequence() and query() are
	final now.

	* doc/project.skel/: meta and config updated.

	* core/DB/DBFactory.class.php: removed in favour of DBPool.

	* core/DB/: cleaned out DB class and all available connectors.

2007-01-05	Konstantin V. Arkhipov

	* meta/: ValueObject pattern implemented, as requested by Antony;
	unused hints support dropped.

2007-01-03	Konstantin V. Arkhipov

	* meta/classes/MetaClassProperty.class.php: removed evil hack for
	MySQL's booleans.

	* meta/builders/SchemaBuilder.class.php: ManyToMany relations building
	implemented.

	* ext/src/core/DB/Dialect.c: rare memory corruption fixed.

2007-01-02	Konstantin V. Arkhipov
